--- a/about.html
+++ b/about.html
@@ -48,7 +48,8 @@
             <div class="about_achievements-right">
                 <h1>Achievements</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex repellat doloribus suscipit aut magnam laborum inventore voluptatem animi praesentium ipsum sit culpa maxime, cupiditate, ut possimus quidem, repellendus iure rem.
+                    Our website has achieved significant milestones, including high user satisfaction ratings, numerous successful course completions, and recognition for excellence in educational content.We've also seen significant growth in our user base and positive feedback.
+
                 </p>
                 <div class="achievements_cards">
                    <article class="achievement_card">
