--- a/course.html
+++ b/course.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class="course_info">
                             <h4>Responsive Social Media Website UI Design</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                        <p>Responsive UI design ensures social media sites work well on any device.</p>
                         <a href="course.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </article>
@@ -56,7 +56,7 @@
                         </div>
                         <div class="course_info">
                             <h4>Responsive SmartHome Website Design</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                        <p>Responsive UI design ensures social media sites work well on any device.</p>
                         <a href="course.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </article>
@@ -67,7 +67,7 @@
                         </div>
                         <div class="course_info">
                             <h4>Responsive Admin Deshboard UI Design</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                        <p>Responsive UI design ensures social media sites work well on any device.</p>
                         <a href="course.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </article>
@@ -78,7 +78,7 @@
                         </div>
                         <div class="course_info">
                             <h4>Responsive Web Mastery</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                        <p>Responsive UI design ensures social media sites work well on any device.</p>
                         <a href="course.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </article>
@@ -89,7 +89,7 @@
                         </div>
                         <div class="course_info">
                             <h4>Responsive UI Bootcamp</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                        <p>Responsive UI design ensures social media sites work well on any device.</p>
                         <a href="course.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </article>
@@ -100,7 +100,7 @@
                         </div>
                         <div class="course_info">
                             <h4>Aaptive Design Academy</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                        <p>Responsive UI design ensures social media sites work well on any device.</p>
                         <a href="course.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </article>
@@ -111,7 +111,7 @@
                         </div>
                         <div class="course_info">
                             <h4>Flexible Web Frameworks</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                        <p>Responsive UI design ensures social media sites work well on any device.</p>
                         <a href="course.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </article>
@@ -122,7 +122,7 @@
                         </div>
                         <div class="course_info">
                             <h4>Dynamic UI Developer</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                        <p>Responsive UI design ensures social media sites work well on any device.</p>
                         <a href="course.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </article>
@@ -133,7 +133,7 @@
                         </div>
                         <div class="course_info">
                             <h4>Progressive Design Principles</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                        <p>Responsive UI design ensures social media sites work well on any device.</p>
                         <a href="course.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </article>
@@ -144,7 +144,7 @@
                         </div>
                         <div class="course_info">
                             <h4>Responsive Admin Deshboard UI Design</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                        <p>Responsive UI design ensures social media sites work well on any device.</p>
                         <a href="course.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </article>
@@ -155,7 +155,7 @@
                         </div>
                         <div class="course_info">
                             <h4>Interactive Web Essentials</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                        <p>Responsive UI design ensures social media sites work well on any device.</p>
                         <a href="course.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </article>
@@ -166,7 +166,7 @@
                         </div>
                         <div class="course_info">
                             <h4>Modern Responsive Techniques</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                        <p>Responsive UI design ensures social media sites work well on any device.</p>
                         <a href="course.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </article>
@@ -178,7 +178,7 @@
                         </div>
                         <div class="course_info">
                             <h4>Responsive Admin Deshboard UI Design</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                        <p>Responsive UI design ensures social media sites work well on any device.</p>
                         <a href="course.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </article>
@@ -190,7 +190,7 @@
                         </div>
                         <div class="course_info">
                             <h4>Responsive Design Foundations</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                        <p>Responsive UI design ensures social media sites work well on any device.</p>
                         <a href="course.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </article>
@@ -201,7 +201,7 @@
                         </div>
                         <div class="course_info">
                             <h4>Responsive Design Intensive</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                        <p>Responsive UI design ensures social media sites work well on any device.</p>
                         <a href="course.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </article>
