--- a/index.html
+++ b/index.html
@@ -65,53 +65,48 @@
     <!--===end of header====-->
 
 
-
-
-
-
-
     <section class="categories">
         <div class="container categories_container">
             <div class="categories_left">
                 <h1>Categories</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo est corporis voluptatibus exercitationem rerum asperiores, assumenda placeat? Sapiente, ullam modi!</p>
+                <p>Blockchain is a secure ledger. Graphic design uses visuals. Finance manages money. Marketing sells. Music arranges sounds. Business is about profits.</p>
                 <a href="#"class="btn">Learn More</a>
             </div>
             <div class="categories_right">
                 <article class="category">
                     <span class="category_icon"><i class="ri-btc-line"></i></span>
                     <h5>BlockChain</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, ut.</p>
+                    <p>Blockchain is a decentralized digital ledger technology.</p>
                 </article>
 
                 <article class="category">
                     <span class="category_icon"><i class="ri-pencil-ruler-2-line"></i></span>
                     <h5>Graphic Design</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, ut.</p>
+                    <p>Graphic design is the art of visually communicating ideas.</p>
                 </article>
 
                 <article class="category">
                     <span class="category_icon"><i class="ri-bank-line"></i></span>
                     <h5>Finance</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, ut.</p>
+                    <p>Finance is the management of money, including investing.</p>
                 </article>
 
                 <article class="category">
                     <span class="category_icon"><i class="ri-bar-chart-2-line"></i></span>
                     <h5>Marketing</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, ut.</p>
+                    <p>Marketing is the process promoting,distributing product. </p>
                  </article>
 
                 <article class="category">
                     <span class="category_icon"><i class="ri-folder-music-line"></i></span>
                     <h5>Music</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, ut.</p>
+                    <p>Music is the art of creating and organizing sounds in time.</p>
                 </article>
 
                 <article class="category">
                     <span class="category_icon"><i class="ri-building-line"></i></span>
                     <h5>Business</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, ut. </p>
+                    <p>Business is the activity of providing goods  for profit. </p>
                 </article>
             </div>
         </div>
@@ -132,7 +127,7 @@
                 </div>
                 <div class="course_info">
                     <h4>Responsive Social Media Website UI Design</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                <p>Responsive UI design ensures social media sites work well on any device.</p>
                 <a href="course.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
@@ -143,7 +138,8 @@
                 </div>
                 <div class="course_info">
                     <h4>Responsive SmartHome Website Design</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                <p>Responsive SmartHome design adapts to any device for easy smart home management.
+                </p>
                 <a href="course.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
@@ -154,7 +150,7 @@
                 </div>
                 <div class="course_info">
                     <h4>Responsive Admin Deshboard UI Design</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni corrupti maxime et, sint alias ipsum ad.</p>
+                <p>Responsive admin dashboard UI adapts to any device for efficient data management.</p>
                 <a href="course.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
@@ -172,7 +168,7 @@
             <div class="faq_icon"><i class="ri-add-line"></i></div>
             <div class="question_answer">
                 <h4>How do I Know the right courses for me?</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate illum fuga qui quisquam quis similique numquam? Deleniti iure pariatur repellendus, dolore placeat totam assumenda impedit amet, officia quo commodi fugit!</p>
+                <p>To find the right courses, match them with your career goals, interests, and learning preferences while ensuring they are offered by reputable providers.</p>
             </div>
         </article>
 
@@ -180,7 +176,7 @@
             <div class="faq_icon"><i class="ri-add-line"></i></div>
             <div class="question_answer">
                 <h4>How I buy the courses?</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate illum fuga qui quisquam quis similique numquam? Deleniti iure pariatur repellendus, dolore placeat totam assumenda impedit amet, officia quo commodi fugit!</p>
+                <p>You can buy courses by visiting educational platforms or institutions, selecting the course you want, and completing the purchase process online through their payment options.</p>
             </div>
         </article>
 
@@ -188,7 +184,7 @@
             <div class="faq_icon"><i class="ri-add-line"></i></div>
             <div class="question_answer">
                 <h4>Will you assist me to get my first job?</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate illum fuga qui quisquam quis similique numquam? Deleniti iure pariatur repellendus, dolore placeat totam assumenda impedit amet, officia quo commodi fugit!</p>
+                <p>I can definitely help with job search tips, resume writing, and interview preparation. Let me know what you need assistance with!</p>
             </div>
         </article>
 
@@ -197,7 +193,7 @@
             <div class="faq_icon"><i class="ri-add-line"></i></div>
             <div class="question_answer">
                 <h4>What are the requirements to start?</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate illum fuga qui quisquam quis similique numquam? Deleniti iure pariatur repellendus, dolore placeat totam assumenda impedit amet, officia quo commodi fugit!</p>
+                <p>To start your job search, you'll need a well-crafted resume, a tailored cover letter, a portfolio (if relevant), an updated LinkedIn profile.</p>
             </div>
         </article>
 
@@ -206,7 +202,7 @@
             <div class="faq_icon"><i class="ri-add-line"></i></div>
             <div class="question_answer">
                 <h4>Do I get certificate for every course I take?</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate illum fuga qui quisquam quis similique numquam? Deleniti iure pariatur repellendus, dolore placeat totam assumenda impedit amet, officia quo commodi fugit!</p>
+                <p>Not all courses provide certificates, but many do, especially those from recognized educational platforms or institutions.Always check the course details to see if a certificate is included.</p>
             </div>
         </article>
 
@@ -215,7 +211,7 @@
             <div class="faq_icon"><i class="ri-add-line"></i></div>
             <div class="question_answer">
                 <h4>Will I have lifetime access to courses I purchase?</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate illum fuga qui quisquam quis similique numquam? Deleniti iure pariatur repellendus, dolore placeat totam assumenda impedit amet, officia quo commodi fugit!</p>
+                <p>It depends on the course provider. Some platforms offer lifetime access to purchased courses, while others may provide access for a limited time.</p>
             </div>
         </article>
 
@@ -224,7 +220,7 @@
             <div class="faq_icon"><i class="ri-add-line"></i></div>
             <div class="question_answer">
                 <h4>What are your payment options?</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate illum fuga qui quisquam quis similique numquam? Deleniti iure pariatur repellendus, dolore placeat totam assumenda impedit amet, officia quo commodi fugit!</p>
+                <p>I don’t handle payments directly. For courses and other services, payment options typically include credit/debit cards, PayPal, and sometimes bank transfers or digital wallets.</p>
             </div>
         </article>
 
@@ -233,7 +229,7 @@
             <div class="faq_icon"><i class="ri-add-line"></i></div>
             <div class="question_answer">
                 <h4>Do I get all source code from projects?</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate illum fuga qui quisquam quis similique numquam? Deleniti iure pariatur repellendus, dolore placeat totam assumenda impedit amet, officia quo commodi fugit!</p>
+                <p>Whether you get all source code from projects depends on the course or provider. Some courses include complete source code, while others may offer partial code or only provide guidance.</p>
             </div>
         </article>
 
@@ -242,7 +238,8 @@
             <div class="faq_icon"><i class="ri-add-line"></i></div>
             <div class="question_answer">
                 <h4>How do I Know the right courses for me?</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate illum fuga qui quisquam quis similique numquam? Deleniti iure pariatur repellendus, dolore placeat totam assumenda impedit amet, officia quo commodi fugit!</p>
+                <p>To find the right courses, assess your career goals, interests, and skills, then look for courses that match these criteria and are offered by reputable institutions or platforms.
+                </p>
             </div>
         </article>
 
@@ -251,7 +248,8 @@
             <div class="faq_icon"><i class="ri-add-line"></i></div>
             <div class="question_answer">
                 <h4>How do I Know the right courses for me?</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate illum fuga qui quisquam quis similique numquam? Deleniti iure pariatur repellendus, dolore placeat totam assumenda impedit amet, officia quo commodi fugit!</p>
+                <p>To find the right courses, assess your career goals, interests, and skills, then look for courses that match these criteria and are offered by reputable institutions or platforms.
+                </p>
             </div>
         </article>
     </div>
@@ -275,7 +273,8 @@
                 </div>
                 <div class="testimonial_body">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero minima eaque optio ipsum nihil nemo, pariatur cumque impedit numquam.
+                        To find the right courses for you, align them with your career goals and interests, ensuring they are offered by reputable providers.
+
                     </p>
                 </div>
             </article>
@@ -291,7 +290,7 @@
                 </div>
                 <div class="testimonial_body">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero minima eaque optio ipsum nihil nemo, pariatur cumque impedit numquam.
+                        This is the best website I've used for learning web development. The courses are thorough, the instructors are knowledgeable. 
                     </p>
                 </div>
             </article>
@@ -307,7 +306,7 @@
                 </div>
                 <div class="testimonial_body">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero minima eaque optio ipsum nihil nemo, pariatur cumque impedit numquam.
+                        This is the best website I've used for learning web development. The courses are thorough, the instructors are knowledgeable.
                     </p>
                 </div>
             </article>
@@ -324,7 +323,7 @@
                 </div>
                 <div class="testimonial_body">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero minima eaque optio ipsum nihil nemo, pariatur cumque impedit numquam.
+                        This is the best website I've used for learning web development. The courses are thorough, the instructors are knowledgeable.
                     </p>
                 </div>
             </article>
@@ -340,7 +339,7 @@
                 </div>
                 <div class="testimonial_body">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero minima eaque optio ipsum nihil nemo, pariatur cumque impedit numquam.
+                        This is the best website I've used for learning web development. The courses are thorough, the instructors are knowledgeable
                     </p>
                 </div>
             </article>
