--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 </div>
                 <h2>Contact Us</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium alias debitis fuga corporis dolor aliquid at repellat reiciendis, officiis hic.
+                    For inquiries or support, please contact us through the email or phone number provided on our website.
                 </p>
                 <ul class="contact_details">
                     <li>
